<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.javautil</groupId>
	<artifactId>nucleus</artifactId>
	<packaging>jar</packaging>

	<name>nucleus</name>

	<parent>
		<groupId>org.javautil</groupId>
		<artifactId>javautil-pom</artifactId>
		<version>8.07.31</version>
                <relativePath>../javautil-pom</relativePath>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<start-class>org.javautil.nucleus.App</start-class>
		<java.version>1.8</java.version>
		<lombok.version>1.14.8</lombok.version>
		<log4jdbc.log4j2.version>1.16</log4jdbc.log4j2.version>
		<rest.assured.version>2.3.3</rest.assured.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.javautil</groupId>
			<artifactId>javautil-jcmdline</artifactId>
			<version>${org.javautil.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>javax.persistence-api</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>${org.yaml.version}</version>
		</dependency>
		<!--
		
		
		
		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>persistence-api</artifactId>
			<version>1.0.2</version>
		</dependency>
		-->
		<!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
		
		<!-- logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${org.slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${org.slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${org.apache.commons-lang3.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${google.gson.version}</version>
		</dependency>
		<dependency>

			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-yaml</artifactId>
			<version>2.10.1</version>


		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.10.1</version>
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>${HikariCP.version}</version>
			<scope>compile</scope>
		</dependency>

		<!-- TODO unify across p<dependency> <groupId>javax.xml.bind</groupId> 
			<artifactId>jaxb-api</artifactId> <version>2.3.1</version> </dependency>rojects -->
		<!-- <dependency> <groupId>com.oracle</groupId> <artifactId>oracle-jdbc8</artifactId> 
			<version>19</version> </dependency> -->
		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${com.h2database.version}</version>
		</dependency>
		<dependency>
			<groupId>dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>${dom4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.driver.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>


</project>
